--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,5 @@ artifacts_root: artifacts
 
 data_ingestion: 
   root_dir: artifacts/data_ingestion
-  source_url: D:/PROJECTS/Dataset/Dataset.zip
-  local_data_file: artifacts/data_ingestion/Dataset.zip
+  local_data_file: "D:\\PROJECTS\\Dataset\\Dataset.zip"
   unzip_dir: artifacts/data_ingestion
