--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,8 @@ data_ingestion:
   root_dir: artifacts/data_ingestion
   local_data_file: "D:\\PROJECTS\\Dataset\\Dataset.zip"
   unzip_dir: artifacts/data_ingestion
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
