--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,5 @@ jobs:
         pip install -r requirements.txt
         pip install pytest
         export PYTHONPATH=src
+        python app.py
         pytest
